--- a/BarcodeSample1/app/src/main/res/values/strings.xml
+++ b/BarcodeSample1/app/src/main/res/values/strings.xml
@@ -1,6 +1,37 @@
 <resources>
-    <string name="app_name">BarcodeSample1</string>
+    <string name="app_name">NCODE CDA</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="select_scanner">Select Scanner:</string>
+
+    <string name="username_label_text">Numero de Empleado:</string>
+    <string name="password_label_text">Contraseña:</string>
+    <string name="login_button_text">Iniciar Sesion</string>
+    <string name="logout_button_text">Cerrar Sesion</string>
+    <string name="login_progress_signing_in_text">Iniciando Sesion…</string>
+    <string name="login_progress_signing_out_text">Cerrando Sesion…</string>
+
+    <string name="sync_with_serever_label_text">Sincronizar datos con el servidor</string>
+    <string name="sync_with_serever_button_text">Sincronizar</string>
+    <string name="sync_with_serever_progress_text">Obteniendo informacion…</string>
+    <string name="sync_error_text">Error al sincronizar</string>
+    <string name="sync_success">Sincronizacion exitosa</string>
+
+    <string name="employee_count_text">Numero de empleados: </string>
+    <string name="location_count_text">Numero de ubicaciones: </string>
+    <string name="asset_count_text">Numero de activos: </string>
+
+    <string name="new_validation_label_text">Nueva Confronta</string>
+    <string name="new_validation_button_text">Iniciar</string>
+    <string name="close_validation_button_text">Finalizar</string>
+    <string name="send_validation_button_text">Enviar datos</string>
+
+    <string name="old_validation_label_text">Confrontas anteriores</string>
+    <string name="old_validation_button_text">Ver confrontas</string>
+
+    <string name="user_name_label_text">Nombre de usuario:</string>
+    <string name="location_name_label_text">Ubicacion:</string>
+    <string name="assets_summary_label_text">Resumen de activos:</string>
+
 </resources>
