--- a/BarcodeSample1/app/src/main/res/values/strings.xml
+++ b/BarcodeSample1/app/src/main/res/values/strings.xml
@@ -12,9 +12,9 @@
     <string name="login_progress_signing_in_text">Iniciando Sesion…</string>
     <string name="login_progress_signing_out_text">Cerrando Sesion…</string>
 
-    <string name="sync_with_serever_label_text">Sincronizar datos con el servidor</string>
-    <string name="sync_with_serever_button_text">Sincronizar</string>
-    <string name="sync_with_serever_progress_text">Obteniendo informacion…</string>
+    <string name="sync_with_server_label_text">Sincronizar datos con el servidor</string>
+    <string name="sync_with_server_button_text">Sincronizar</string>
+    <string name="sync_with_server_progress_text">Obteniendo informacion…</string>
     <string name="sync_error_text">Error al sincronizar</string>
     <string name="sync_success">Sincronizacion exitosa</string>
 
@@ -23,8 +23,8 @@
     <string name="asset_count_text">Numero de activos: </string>
 
     <string name="new_validation_label_text">Nueva Confronta</string>
-    <string name="new_validation_button_text">Iniciar</string>
-    <string name="close_validation_button_text">Finalizar</string>
+    <string name="new_validation_button_text">Iniciar Confronta</string>
+    <string name="close_validation_button_text">Finalizar Confronta</string>
     <string name="send_validation_button_text">Enviar datos</string>
 
     <string name="old_validation_label_text">Confrontas anteriores</string>
@@ -33,5 +33,14 @@
     <string name="user_name_label_text">Nombre de usuario:</string>
     <string name="location_name_label_text">Ubicacion:</string>
     <string name="assets_summary_label_text">Resumen de activos:</string>
+    <string name="asset_number_header_text">Num. SAP</string>
+    <string name="asset_description_header_text">Descripción</string>
+    <string name="sync_employees">Sync Employees</string>
+    <string name="sync_buildings">Sync Buildings</string>
+    <string name="confronta_f_sica_en_proceso">Confronta Física en proceso</string>
+    <string name="hola">"Hola, "</string>
+    <string name="confronta_f_sica_termianda">Confronta Terminada</string>
+    <string name="confrontas_f_sicas_pendientes">Confrontas Físicas anteriores</string>
+    <string name="confronta_f_sica_pendiente">Confronta Física anterior</string>
 
 </resources>
