string resources updated

--- a/BarcodeSample1/app/src/main/res/values/strings.xml
+++ b/BarcodeSample1/app/src/main/res/values/strings.xml
@@ -47,5 +47,8 @@
     <string name="confrontas_f_sicas_pendientes">Confrontas Físicas anteriores</string>
     <string name="confronta_f_sica_pendiente">Confronta Física anterior</string>
     <string name="synced_with_server">Synced with server!</string>
+    <string name="opciones">Opciones</string>
+    <string name="scan">Scan</string>
+    <string name="continuar">Continuar</string>
 
 </resources>
