activity main updated

--- a/BarcodeSample1/app/src/main/res/values/strings.xml
+++ b/BarcodeSample1/app/src/main/res/values/strings.xml
@@ -51,5 +51,6 @@
     <string name="scan">Scan</string>
     <string name="continuar">Continuar</string>
     <string name="confrontas_pendientes">Confrontas pendientes</string>
+    <string name="informaci_n">Información</string>
 
 </resources>
