--- a/BarcodeSample1/app/src/main/res/values/strings.xml
+++ b/BarcodeSample1/app/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
     <string name="continuar">Continuar</string>
     <string name="confrontas_pendientes">Confrontas pendientes</string>
     <string name="informaci_n">Información</string>
+    <string name="actualizar">Actualizar</string>
 
 </resources>
