--- a/BarcodeSample1/app/src/main/res/values/strings.xml
+++ b/BarcodeSample1/app/src/main/res/values/strings.xml
@@ -54,5 +54,11 @@
     <string name="informaci_n">Información</string>
     <string name="actualizar">Actualizar</string>
     <string name="regresar">Regresar a Inicio</string>
+    <string name="descargar_datos">Descargar datos</string>
+    <string name="ver_confrontas">Ver Confrontas</string>
+    <string name="nueva_confronta">Nueva confronta</string>
+    <string name="informaci_n_de_activos">Información de Activos</string>
+    <string name="iniciar_sesi_n">Iniciar sesión</string>
+    <string name="cerrar_sesi_n">Cerrar sesión</string>
 
 </resources>
